--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>
+      // Initialize the Kakao SDK
+      Kakao.init('%VITE_KAKAO_JS_SDK_KEY%');
+      console.log(Kakao.isInitialized()); // Check if the SDK is initialized
+      // Check if the SDK is initialized
+    </script>
   </body>
 </html>
