--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jugger</title>
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = 'https://www.clarity.ms/tag/' + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, 'clarity', 'script', 'rjj8pq9nuu');
+    </script>
   </head>
   <body>
     <div id="root"></div>
@@ -12,9 +26,8 @@
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script>
       // Initialize the Kakao SDK
-      Kakao.init('%VITE_KAKAO_JS_SDK_KEY%');
-      console.log(Kakao.isInitialized()); // Check if the SDK is initialized
-      // Check if the SDK is initialized
+      Kakao.init('%VITE_REST_API_KEY%');
+      console.log(Kakao.isInitialized());
     </script>
   </body>
 </html>
